--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "postcss-px-to-viewport": "^1.1.1",
+    "vant": "^2.12.48",
+    "vue": "^2.6.14",
+    "vue-router": "3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +20,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-import": "^1.13.5",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "style-resources-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
