--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "core-js": "^3.8.3",
     "postcss-px-to-viewport": "^1.1.1",
     "vant": "^2.12.48",
